[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Others/ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D"]
script = ExtResource( 1 )

[node name="shake" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="End_timer" type="Timer" parent="."]
[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="End_timer" to="." method="_on_End_timer_timeout"]
